[gd_scene load_steps=14 format=3 uid="uid://chho6lbm58piy"]

[ext_resource type="PackedScene" uid="uid://bm3fja65el4ds" path="res://prefabs/conductor.tscn" id="1_0dnaj"]
[ext_resource type="Script" path="res://scripts/dance_battle/battle_manager.gd" id="1_0xuis"]
[ext_resource type="Shader" path="res://shaders/stripes.gdshader" id="2_1fkdd"]
[ext_resource type="PackedScene" uid="uid://0d2s6vso0ikd" path="res://prefabs/arrow.tscn" id="2_tl5vw"]
[ext_resource type="AudioStream" uid="uid://b1x5kapgk768o" path="res://music/DanceBeat3.mp3" id="3_cirfs"]
[ext_resource type="Shader" path="res://shaders/vignette.gdshader" id="3_ml6bi"]
[ext_resource type="Texture2D" uid="uid://ba81cymnbwoo1" path="res://Art/spotlight.png" id="5_nusrj"]
[ext_resource type="Shader" path="res://shaders/godrays.gdshader" id="6_xlc0g"]
[ext_resource type="FontFile" uid="uid://b2v5qa4wapbfa" path="res://fonts/alagard.ttf" id="8_f4qao"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tc63q"]
shader = ExtResource("2_1fkdd")
shader_parameter/color_gap = Color(0.2, 0, 0.0823529, 1)
shader_parameter/color_stripe = Color(0.262745, 0, 0.117647, 1)
shader_parameter/divisions = 6.0
shader_parameter/stripe_bias = 2.0
shader_parameter/speed = 0.05
shader_parameter/angle = 0.5

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lneac"]
shader = ExtResource("3_ml6bi")
shader_parameter/vignette_intensity = 0.3
shader_parameter/vignette_opacity = 1.0
shader_parameter/vignette_rgb = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_to4y8"]
bg_color = Color(0, 0, 0, 0.392157)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tidxc"]
shader = ExtResource("6_xlc0g")
shader_parameter/angle = 0.52
shader_parameter/position = 0.097
shader_parameter/spread = 0.0
shader_parameter/cutoff = 0.3
shader_parameter/falloff = 1.0
shader_parameter/edge_fade = 0.1
shader_parameter/speed = 5.0
shader_parameter/ray1_density = 8.0
shader_parameter/ray2_density = 30.0
shader_parameter/ray2_intensity = 0.3
shader_parameter/color = Color(1, 0.756863, 1, 0.8)
shader_parameter/hdr = false
shader_parameter/seed = 5.0

[node name="level_battle" type="Node2D"]

[node name="BattleManager" type="Node2D" parent="."]
script = ExtResource("1_0xuis")

[node name="StripeBackground" type="ColorRect" parent="BattleManager"]
z_index = -2
z_as_relative = false
material = SubResource("ShaderMaterial_tc63q")
offset_right = 1280.0
offset_bottom = 720.0

[node name="Vignette" type="ColorRect" parent="BattleManager"]
z_index = -2
z_as_relative = false
material = SubResource("ShaderMaterial_lneac")
offset_right = 1280.0
offset_bottom = 720.0

[node name="Spotlight" type="TextureRect" parent="BattleManager"]
self_modulate = Color(1, 1, 1, 0.392157)
z_index = -1
z_as_relative = false
offset_left = 64.0
offset_top = 320.0
offset_right = 128.0
offset_bottom = 384.0
scale = Vector2(4, 3)
texture = ExtResource("5_nusrj")

[node name="Spotlight2" type="TextureRect" parent="BattleManager"]
self_modulate = Color(1, 1, 1, 0.392157)
z_index = -1
z_as_relative = false
offset_left = 960.0
offset_top = 320.0
offset_right = 1024.0
offset_bottom = 384.0
scale = Vector2(4, 3)
texture = ExtResource("5_nusrj")

[node name="Conductor" parent="BattleManager" instance=ExtResource("1_0dnaj")]
stream = ExtResource("3_cirfs")
bpm = 130.0

[node name="PanelContainer" type="PanelContainer" parent="BattleManager"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 384.0
offset_right = 896.0
offset_bottom = 800.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_to4y8")

[node name="ArrowContainer" type="Node2D" parent="BattleManager/PanelContainer"]
position = Vector2(256, 580)

[node name="ArrowButtonLeft" parent="BattleManager/PanelContainer/ArrowContainer" instance=ExtResource("2_tl5vw")]
position = Vector2(-192, 0)
input = "left"

[node name="AnimatedSprite2D" parent="BattleManager/PanelContainer/ArrowContainer/ArrowButtonLeft" index="0"]
rotation = -1.5708

[node name="ArrowButtonDown" parent="BattleManager/PanelContainer/ArrowContainer" instance=ExtResource("2_tl5vw")]
position = Vector2(-64, 0)
input = "down"

[node name="AnimatedSprite2D" parent="BattleManager/PanelContainer/ArrowContainer/ArrowButtonDown" index="0"]
rotation = 3.14159

[node name="ArrowButtonUp" parent="BattleManager/PanelContainer/ArrowContainer" instance=ExtResource("2_tl5vw")]
position = Vector2(64, 0)
input = "up"

[node name="AnimatedSprite2D" parent="BattleManager/PanelContainer/ArrowContainer/ArrowButtonUp" index="0"]
position = Vector2(0, -1)

[node name="ArrowButtonRight" parent="BattleManager/PanelContainer/ArrowContainer" instance=ExtResource("2_tl5vw")]
position = Vector2(192, 0)
input = "right"

[node name="AnimatedSprite2D" parent="BattleManager/PanelContainer/ArrowContainer/ArrowButtonRight" index="0"]
rotation = 1.5708

[node name="MarginContainer" type="MarginContainer" parent="BattleManager/PanelContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="BattleManager/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 120

[node name="ColorRect" type="ColorRect" parent="BattleManager/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
color = Color(0, 0, 0, 1)

[node name="ColorRect2" type="ColorRect" parent="BattleManager/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
color = Color(0, 0, 0, 1)

[node name="ColorRect3" type="ColorRect" parent="BattleManager/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
color = Color(0, 0, 0, 1)

[node name="ColorRect4" type="ColorRect" parent="BattleManager/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
color = Color(0, 0, 0, 1)

[node name="ColorRect5" type="ColorRect" parent="BattleManager/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
color = Color(0, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="BattleManager"]
z_index = 1
z_as_relative = false
offset_right = 488.0
offset_bottom = 146.0
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="BattleManager/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Info" type="Label" parent="BattleManager/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.505882, 0.505882, 0.505882, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("8_f4qao")
text = "Press [F1] to instantly win the battle (debug)"

[node name="Score" type="Label" parent="BattleManager/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("8_f4qao")
theme_override_font_sizes/font_size = 32
text = "Score: 0"

[node name="Combo" type="Label" parent="BattleManager/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("8_f4qao")
theme_override_font_sizes/font_size = 32
text = "Combo: 0"

[node name="Misses" type="Label" parent="BattleManager/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("8_f4qao")
theme_override_font_sizes/font_size = 32
text = "Misses: 0"

[node name="PlayerPosition" type="Node2D" parent="BattleManager"]
position = Vector2(192, 376)

[node name="EnemyPosition" type="Node2D" parent="BattleManager"]
position = Vector2(1088, 376)

[node name="GodRays" type="ColorRect" parent="BattleManager"]
material = SubResource("ShaderMaterial_tidxc")
offset_top = -80.0
offset_right = 1280.0
offset_bottom = 640.0

[node name="GodRays2" type="ColorRect" parent="BattleManager"]
material = SubResource("ShaderMaterial_tidxc")
offset_left = 893.0
offset_top = -80.0
offset_right = 2173.0
offset_bottom = 640.0

[connection signal="beat" from="BattleManager/Conductor" to="BattleManager" method="_on_conductor_beat"]
[connection signal="measure" from="BattleManager/Conductor" to="BattleManager" method="_on_conductor_measure"]

[editable path="BattleManager/PanelContainer/ArrowContainer/ArrowButtonLeft"]
[editable path="BattleManager/PanelContainer/ArrowContainer/ArrowButtonDown"]
[editable path="BattleManager/PanelContainer/ArrowContainer/ArrowButtonUp"]
[editable path="BattleManager/PanelContainer/ArrowContainer/ArrowButtonRight"]
